Migrated to Java13 and modularized app: - reorganized modules and packages - discarded deprecated methods - discarded split packages from slf4j-ext